# nomad-ai-agent

./: .gitignore  main.py  pyproject.toml
assignments/03-movie-agent-complete-loop/: main.ipynb
assignments/04-life-coach-web-search/: main.py
assignments/05-life-coach-file-search/: life-coach-memory.db  main.ipynb  main.py  my_goals.txt
assignments/07-restaurant-bot-handoffs/: main.py
assignments/08-restaurant-bot-gaurdrails/: main.py  requirements.txt
study/open-ai-agent-sdk/Intro/: 07.open-ai-agent-sdk.md  7.2-chat-bot.ipynb  7.3-chat-bot-session.ipynb  7.4-chat-bot-handoffs.ipynb  7.5-chat-bot-viz.ipynb  ai-memory.db  ai-memory.db-shm  ai-memory.db-wal
study/openai/: 02-first-agent.ipynb  02.first-agent.md  template.ipynb
