[project]
name = "nomad-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "certifi>=2026.5.20",
    "ipykernel>=7.3.0",
    "notebook>=7.5.7",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "graphviz>=0.21",
    "streamlit>=1.48.0",
    "openai-agents>=0.17.5",
]
